--- a/index.html
+++ b/index.html
@@ -22,10 +22,34 @@
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
-        <button id="start">Start Quiz</button>
+        <button id="start-button">Start Quiz</button>
       </div>
 
-      <div id="questions" class="hide">
+      <div id="display-container">
+        <div class="header">
+          <div class="number-of-counts">
+            <span class="number-of-question">
+              1 out of 10 questions
+            </span>
+          </div>
+          <div class="timer-div">
+            <img src="timer-icon" alt="timer-icon" width="20px">
+            <span class="time-left">10s</span>
+          </div>
+
+          <!-- questions -->
+          <div id="questions-container">
+            <!-- questions will display here -->
+          </div>
+          <button id="next-button">Next</button>
+        </div>
+        <div class="score-container hide">
+          <div id="user-score">Demo Score</div>
+          <button id="restart">Restart</button>
+        </div>
+      </div>
+
+      <!-- <div id="questions" class="hide">
         <h2 id="question-title"></h2>
         <div id="choices" class="choices"></div>
       </div>
@@ -40,7 +64,7 @@
       </div>
 
       <div id="feedback" class="feedback hide"></div>
-    </div>
+    </div> -->
 
     <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/logic.js"></script>
