--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <div class="timer">Time: <span id="time">0</span></div>
 
-    <div class="wrapper">
+    <div class="start-screen">
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
-        <p>
+        <p id="beg-txt" class="hide">
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
@@ -66,7 +66,6 @@
       <div id="feedback" class="feedback hide"></div>
     </div> -->
 
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
