--- a/index.html
+++ b/index.html
@@ -12,28 +12,19 @@
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
-
     <div class="start-screen">
-      <div id="start-screen" class="start">
-        <h1>Coding Quiz Challenge</h1>
-        <p id="beg-txt" class="hide">
-          Try to answer the following code-related questions within the time
-          limit. Keep in mind that incorrect answers will penalize your
-          score/time by ten seconds!
-        </p>
-        <button id="start-button">Start Quiz</button>
-      </div>
+      <button id="start-button">Start Quiz</button>
+    </div>
 
       <div id="display-container">
         <div class="header">
-          <div class="number-of-counts">
+          <div class="number-of-count">
             <span class="number-of-question">
               1 out of 10 questions
             </span>
           </div>
           <div class="timer-div">
-            <img src="timer-icon" alt="timer-icon" width="20px">
+            <img src="./assets/images/time-img.png" alt="timer-icon" width="20px"></img>
             <span class="time-left">10s</span>
           </div>
 
