--- a/index.html
+++ b/index.html
@@ -10,52 +10,31 @@
   </head>
 
   <body>
-    <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
     <div class="start-screen">
-      <button id="start-button">Start Quiz</button>
+      <button id="start-button">Start</button>
     </div>
-
-      <div id="display-container">
-        <div class="header">
-          <div class="number-of-count">
-            <span class="number-of-question">
-              1 out of 10 questions
-            </span>
-          </div>
-          <div class="timer-div">
-            <img src="./assets/images/time-img.png" alt="timer-icon" width="20px"></img>
-            <span class="time-left">10s</span>
-          </div>
-
-          <!-- questions -->
-          <div id="questions-container">
-            <!-- questions will display here -->
-          </div>
-          <button id="next-button">Next</button>
+    <div id="display-container">
+      <div class="header">
+        <div class="number-of-count">
+          <span class="number-of-question">
+            1 out of 10 Questions
+          </span>
         </div>
-        <div class="score-container hide">
-          <div id="user-score">Demo Score</div>
-          <button id="restart">Restart</button>
+        <div class="timer-div">
+          <img src="./assets/images/time-img.png" alt="timer" width="20px"/>
+          <span class="time-left">10s</span>
         </div>
       </div>
-
-      <!-- <div id="questions" class="hide">
-        <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+      <div id="container">
+        <!-- questions and options to be displayed here -->
       </div>
-
-      <div id="end-screen" class="hide">
-        <h2>All done!</h2>
-        <p>Your final score is <span id="final-score"></span>.</p>
-        <p>
-          Enter initials: <input type="text" id="initials" max="3" />
-          <button id="submit">Submit</button>
-        </p>
-      </div>
-
-      <div id="feedback" class="feedback hide"></div>
-    </div> -->
+      <button id="next-button">Next</button>
+    </div>
+    <div class="score-container hide">
+      <div id="user-score">Demo Score</div>
+      <button id="restart">Restart</button>
+    </div>
 
     <script src="./assets/js/script.js"></script>
   </body>
